# ndm_test_2_server

./: CMakeLists.txt  NDM_TEST_2.kdev4  README.md  main.cpp
inc/: genlserver.hpp
src/: genlserver.cpp
